--- a/sugar/package.json
+++ b/sugar/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.3.11",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-multilevel-dropdown": "^3.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
